--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -7,6 +7,10 @@
 //   font-family: "Open Sans", "Helvetica", Arial, "sans-serif";
 // }
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	font-family: -apple-system, BlinkMacSystemFont,
 	    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
